--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "helmet": "^8.1.0",
     "ioredis": "^5.7.0",
     "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
