--- a/package.json
+++ b/package.json
@@ -37,10 +37,13 @@
     "@nestjs/throttler": "^6.4.0",
     "@prisma/client": "^6.14.0",
     "argon2": "^0.44.0",
+    "bullmq": "^5.58.1",
+    "cheerio": "^1.1.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cookie-parser": "^1.4.7",
     "date-fns": "^4.1.0",
+    "got": "^14.4.7",
     "helmet": "^8.1.0",
     "ioredis": "^5.7.0",
     "nestjs-throttler-storage-redis": "^0.5.1",
